--- a/ShopMuseoProgettoFinale/Views/User/Buy.cshtml
+++ b/ShopMuseoProgettoFinale/Views/User/Buy.cshtml
@@ -6,61 +6,62 @@
     <link rel="stylesheet" href="~/css/Details.css" />
 }
 
+@* 
+    Il form non ha un modo per fare post e mancano i metodi adatti per rimodellare la pagina in base a cosa succede
+    Inoltre, il layout fa ancora modificato un po'
+*@
+
 <div class="container">
     <div class="row">
-        <div class="col col-12 col-sm-12 col-lg-6 col-md-6" id="titleImageDiv">
-            <h3 id="productTitle"></h3> 
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+            <img id="productImage" class="details_Img" src="">
         </div>
-
-
-        <div class="col col-12 col-sm-12 col-md-6 ol-lg-6" id="productDescription">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6" id="productDescription">
+            <h3 id="productTitle"></h3>
         </div>
-
-
         <div id="quantitàDaAcquistare">
         </div>
+        <div>
+            <div id="postPurchase" class="row">
 
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="successfulPurchase" class="container-fluid d-none">
+    <div class="row d-flex justify-content-center">
+        <div class="col-12 col-md-6 col-lg-4 text-center">
+            <img id="hiddenImageSuccess" src="" alt="" class="img-fluid object-fit-cover" />
+            <p class="text-success">L'acquisto è stato completato con successo! Grazie mille!</p>
+        </div>
     </div>
 </div>
 
 @section Scripts {
 
     <script type="text/javascript">
-        const id = window.location.href.substring(window.location.href.lastIndexOf('/') + 1);
+    const id = window.location.href.substring(window.location.href.lastIndexOf('/') + 1);
 
-        axios.get(`https://localhost:7128/api/product/${id}`).then((res) => {
-      
-            document.getElementById('productTitle').innerHTML +=  `${res.data.name}`;
-            document.getElementById('titleImageDiv').innerHTML += `<img class="details_Img" src="${res.data.pictureUrl}">`;
-            document.getElementById("productDescription").innerHTML +=  `
-            <p>${res.data.description}</p>
-            <p>price: ${res.data.price} Euro</p>
-            `
+    @* Funzione per riempire la pagina con i dati necessari *@
+    axios.get(`https://localhost:7128/api/product/${id}`)
+        .then((res) => {
+            formatter = Intl.NumberFormat('it-IT', {
+                style: 'currency',
+                currency: 'EUR'
+            })
 
-            if(res.data.quantity<=4){
-                document.getElementById("productDescription").innerHTML += `<p style="color:red; text-weight:bold; ">only ${res.data.quantity} left</p>`;
+            document.getElementById('productTitle').innerHTML += `${res.data.name}`;
+            document.getElementById('productImage').setAttribute('src', res.data.pictureUrl);
+            document.getElementById('hiddenImageSuccess').setAttribute('src', res.data.pictureUrl);
+            document.getElementById("productDescription").innerHTML += `<p>${res.data.description}</p>
+                                                                        <p>Prezzo: ${formatter.format(res.data.price)}</p>`
+
+            if (res.data.quantity <= 10) {
+                document.getElementById("productDescription").innerHTML += `<p class="text-danger fw-bold">Solo ${res.data.quantity} rimasti</p>`;
+            } else {
+                document.getElementById("productDescription").innerHTML += `<p class="text-success fw-semibold">Disponibilità immediata</p>`;
             }
-
-
-            document.getElementById("quantitàDaAcquistare").innerHTML += `<form asp-controller="UserApi" asp-action="Purchase method="post">
-            <div class="mb-3">
-
-            <label> inserisci la quantità che vuoi acquistare </label>
-            <input asp-for="" type="text" class="form-control">
-            <span asp-validation-for="" class="text-danger"></span>
-
-            </div>
-
-            <div class="text-end">
-            <input type="submit" class="btn btn-small btn-info" value="Salva">
-            </div>
-
-            </form> `
-
-            
-             
         })
-
     </script>
-
 }
