--- a/ShopMuseoProgettoFinale/wwwroot/css/Details.css
+++ b/ShopMuseoProgettoFinale/wwwroot/css/Details.css
@@ -8,11 +8,11 @@
  #titleImageDiv {
      padding:2%;
      text-align:center;
-     border:solid 3px red;
+/*     border:solid 3px red;*/
  }
 
  #productDescription {
      padding:3%;
-     border:solid 2px black;
+/*     border:solid 2px black;*/
  }
 
