--- a/ShopMuseoProgettoFinale/Views/Shared/_AdminProductCard.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_AdminProductCard.cshtml
@@ -2,7 +2,7 @@
 
 <div class="card w-100">
     <div class="ratio ratio-4x3">
-        <img src="@Model.PictureUrl" alt="" class="card-img-top" />
+        <img src="@Model.PictureUrl" alt="" class="card-img-top object-fit-contain" />
     </div>
 
     <div class="card-body d-flex flex-column align-items-center justify-content-start">
