--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -31,9 +31,13 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="User" asp-action="Products">Negozio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="Admin" asp-action="Index">Amministrazione</a>
-                    </li>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Admin" asp-action="Index">Amministrazione</a>
+                        </li>
+                    }
+                    
                     <partial name="_LoginPartial" />
                 </ul>
             </div>
