--- a/ShopMuseoProgettoFinale/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/ShopMuseoProgettoFinale/Areas/Identity/Pages/Account/Logout.cshtml
@@ -7,14 +7,12 @@
 <header>
     <h1>@ViewData["Title"]</h1>
     @{
-        if (User.Identity.IsAuthenticated)
-        {
+        if (User.Identity.IsAuthenticated) {
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
+                <button type="submit" class="nav-link btn btn-link">Click here to Logout</button>
             </form>
         }
-        else
-        {
+        else {
             <p>You have successfully logged out of the application.</p>
         }
     }
