--- a/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
+++ b/ShopMuseoProgettoFinale/Views/Shared/_Layout.cshtml
@@ -46,7 +46,40 @@
     </main>
 
     <footer class="ps-1">
-        Copyright © Museum Shop
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h3>About the Museum</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, lectus eu bibendum auctor, ante dui varius metus, ut dictum libero libero euismod mi.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Contact Us</h3>
+                        <ul>
+                            <li>Address: 123 Main Street, Anytown USA</li>
+                            <li>Phone: (123) 456-7890</li>
+                            <li>Email: info@museum.com</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Follow Us</h3>
+                        <ul class="social-icons">
+                            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+                            <li>
+                                <a href="https://www.facebook.com/tuo-museo"><i class="fab fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.twitter.com/tuo-museo"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/tuo-museo"><i class="fab fa-instagram"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
